Closed Bug 1498417 Opened 7 years ago Closed 7 years ago

Don't manually black list other vendors from WebRender

Categories

(Core :: Graphics: WebRender, defect, P3)

defect

Tracking

()

VERIFIED FIXED
mozilla65
Tracking Status
firefox64 --- verified
firefox65 --- verified

People

(Reporter: jrmuizel, Assigned: kats)

References

Details

Attachments

(1 file, 1 obsolete file)

Priority: -- → P3
Assignee: nobody → jmuizelaar
This never landed, but we should land it. Stealing.
Assignee: jmuizelaar → kats
We already have a check for the nvidia vendor id in gfxPlatform.cpp so we don't need to list all the other vendors explicitly.
Pushed by kgupta@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/3b0d0d3516bc Don't manually blacklist non-nVidia drivers from WebRender. r=mattwoodrow
Attachment #9016487 - Attachment is obsolete: true
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Mind requesting release uplift? This is a dependency for bug 1501533.
Flags: needinfo?(kats)
Comment on attachment 9019765 [details] Bug 1498417 - Don't manually blacklist non-nVidia drivers from WebRender. r?mattwoodrow [Beta/Release Uplift Approval Request] Feature/Bug causing the regression: none User impact if declined: No user visible impact, but we want this as a dependency for uplifting bug 1501533 to 64 Is this code covered by automated tests?: No Has the fix been verified in Nightly?: Yes Needs manual test from QE?: No If yes, steps to reproduce: List of other uplifts needed: None Risk to taking this patch: Low Why is the change risky/not risky? (and alternatives if risky): It's removing redundant code and has had lots of bake time so not really risky String changes made/needed: none
Flags: needinfo?(kats)
Attachment #9019765 - Flags: approval-mozilla-release?
Hi, can someone provide the steps for this issue, its not exactly clear for us on how to test it, does this mean that Some other videocards other than Nvidia might also see the Webrender in about support if they set the gfx.webrender.all in about config ? Can someone help us verify this issue ?
Flags: needinfo?(jmuizelaar)
Flags: needinfo?(kats)
This patch should be a "doesn't change anything" patch - it just cleans up some code. The code being modified ensures that if you set gfx.webrender.all.qualified to true, only NVidia cards will get WebRender enabled. So you could e.g. test with a modern NVidia card and say an Intel or AMD card, set gfx.webrender.all.qualified to true, and ensure that the behaviour with this patch is the same as the behaviour without the patch (you should get WR enabled in about:support with the NVidia card, assuming you meet the other qualification criteria, but not with the AMD/Intel card).
Flags: needinfo?(kats)
Flags: needinfo?(jmuizelaar)
Based on Comment 10 and the fact that we tested this issue on Windows 10 using Nightly 65.0a1 (2018-12-06) with and Without NVIDIA cards, we can mark this issue as verified since The WebRender is correctly recognized on Nvidia cards in about:support.
Status: RESOLVED → VERIFIED
Flags: qe-verify+
Comment on attachment 9019765 [details] Bug 1498417 - Don't manually blacklist non-nVidia drivers from WebRender. r?mattwoodrow included in 64.0 rc2, thanks
Attachment #9019765 - Flags: approval-mozilla-release? → approval-mozilla-release+
I have re-tested this issue on firefox Beta 65.0b2 and i can confirm it as fixed. WebRender is displayed correctly in about:support on Windows 10 with Nvidia cards, but its not displayed on Other VGA cards. I will mark this issue accordingly.
Flags: qe-verify+
If you tested on 65.0b2 did you flip the 64 status flag on purpose?
Flags: needinfo?(rares.doghi)
Hi, I tested this issue on Nightly 65.0a1 and I grab The Beta build from here https://tools.taskcluster.net/index/gecko.v2.mozilla-beta.latest.firefox/win64-opt, I thought that was the latest beta build that we should test this on and that was the coresponding flag for Beta 64, in case I was mistaken I also tested the Build from https://tools.taskcluster.net/index/gecko.v2.mozilla-release.latest.firefox/win64-opt which is 64.0 id 20181210010320 and Its Confirmed as fixed there as well. Please let me know if I should change any flags back to fixed and sorry for the confusion.
Flags: needinfo?(rares.doghi) → needinfo?(jcristau)
Sounds good, thanks.
Flags: needinfo?(jcristau)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: