Bug 1498417 - Don't manually blacklist non-nVidia drivers from WebRender. r=mattwoodrow a=jcristau

We already have a check for the nvidia vendor id in gfxPlatform.cpp so
we don't need to list all the other vendors explicitly.

Differential Revision: https://phabricator.services.mozilla.com/D9677